[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/battle/BattleScene.gd" id="1_battle"]
[ext_resource type="PackedScene" path="res://scenes/battle/HexMap.tscn" id="2_hexmap"]
[ext_resource type="PackedScene" path="res://scenes/ui/HUD.tscn" id="3_hud"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_battle")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 360)

[node name="WorldRoot" type="Node2D" parent="."]

[node name="HexMap" type="Node2D" parent="WorldRoot" instance=ExtResource("2_hexmap")]

[node name="ShipContainer" type="Node2D" parent="WorldRoot"]

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="HUD" type="Node" parent="UI" instance=ExtResource("3_hud")]
